<resources>
    <string name="app_name">Walkin-Clinic-UI</string>
    <string name="Login_page">Login</string>
    <string name="username_text">Enter Your Username</string>
    <string name="password_text">Enter Your Password</string>
    <string name="username_field" />
    <string name="login_button">LOG IN</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="create_account_page">Create Account</string>
    <string name="email_field">Enter your email account</string>
    <string name="enter_email_field">Email</string>
    <string name="username_label">Enter a username</string>
    <string name="password_label">Enter a Password (Must contain a minimum of 10 characters, 1 upper case letter, 1 lower case letter, and 1 number.</string>
    <string name="confirm_password_label">Confirm you password</string>
    <string name="create_account_button">Create Account</string>
    <string name="account_page_button">Create Account</string>
    <string name="account_type_label">Select an Account Type</string>

    <string-array name="accounts">
        <item>employee</item>
        <item>patient</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="elcome_screen_title">WELCOME!</string>
    <string name="logout_button">Log Out</string>
    <string name="loginUsernameHint">Enter your username</string>
    <string name="loginPasswordHint">Enter your password</string>
    <string name="createEmailHint">Enter your email address</string>
    <string name="createUsernameHint">Create a username</string>
    <string name="createPasswordHint">Create a password</string>
    <string name="createPassword2Hint">Enter your password again</string>

</resources>
